--- a/public/global.css
+++ b/public/global.css
@@ -1,63 +1,32 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
+*,
+*::after,
+*::before {
+  box-sizing: inherit; }
+
+::selection {
+  background: yellow;
+  color: #191F33; }
+
+html {
+  box-sizing: border-box;
+  font-family: "Founders Grotesk Text", Arial, sans-serif;
+  line-height: 1.34; }
 
 body {
-	color: #333;
-	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  color: #191F33;
+  margin: 0; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Founders Grotesk", Arial, sans-serif;
+  font-weight: bold; }
+
+h1, h2, h3, h4, h5, h6,
+p, ul {
+  margin-top: 0; }
 
 a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
-}
-
-label {
-	display: block;
-}
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
-
-input:disabled {
-	color: #ccc;
-}
-
-button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
-}
-
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
-}
+  color: currentColor; }
+  a:active, a:focus, a:hover {
+    text-decoration: none; }
